<resources>
	<string name="zpw_string_merchant_creditcard_3ds_url_prefix">pay/success?orderNo</string>
    <string name="zpw_font_regular">Roboto-Regular</string>
    <string name="zpw_font_medium">Roboto-Medium</string>
    <string name="zpw_string_params_wrong">Thông tin thanh toán không hợp lệ.</string>
    <string name="zpw_not_allow_payment_app">Ứng dụng không được phép thanh toán.Vui lòng chọn ứng dụng khác.</string>
    <string name="zpw_save_credit_card">Thẻ đã lưu số cuối ***</string>
    <string name="zpw_string_all_channel_maintenance">Kênh thanh toán đang bảo trì.</string>
    <string name="zpw_string_alert_min_amount_input">Yêu cầu số tiền tối thiểu là %s VNĐ</string>
    <string name="zpw_string_alert_max_amount_input">Yêu cầu số tiền tối đa là %s VNĐ</string>
    <string name="zingpaysdk_notification">Thông báo</string>
    <string name="zingpaysdk_card_password">Mật mã thẻ</string>
    <string name="zingpaysdk_card_password_ex">Mật khẩu</string>
    <string name="zingpaysdk_captchar_inputing">Mã xác thực</string>
    <string name="zingpaysdk_otp">Nhập mã OTP</string>
    <string name="zingpaysdk_submit">Thanh toán ngay</string>
    <string name="zingpaysdk_app_name">ZingPaySDK</string>
    <string name="zingpaysdk_close">Đồng ý</string>
    <string name="zingpaysdk_cancel">Trở lại</string>
    <string name="zingpaysdk_pmc_name_atm">Thanh Toán ATM</string>
    <string name="zingpaysdk_atm_issue_date">Ngày phát hành: </string>
    <string name="zingpaysdk_atm_expire_date">Ngày hết hạn: </string>
    <string name="zingpaysdk_alert_transaction_success">Thanh toán thành công</string>
    <string name="zingpaysdk_alert_maintance">Hệ thống đang bảo trì, bạn vui lòng thử lại sau</string>
    <string name="zingpaysdk_alert_processing">Đang xử lý</string>
    <string name="zingpaysdk_alert_get_status">Đang nhận kết quả  giao dịch</string>
    <string name="zingpaysdk_alert_continue_processing">Giao dịch vẫn còn đang xử lý</string>
    <string name="zingpaysdk_alert_processing_check_app_info">Đang kiểm tra thông tin ứng dụng</string>
    <string name="zingpaysdk_alert_processing_loading_resource">Đang khởi tạo dữ liệu ứng dụng</string>
    <string name="zingpaysdk_confirm_quit">Giao dịch sẽ bị hủy.\nBạn thật sự muốn thoát ?</string>
    <string name="zingpaysdk_confirm_continue_channel01"><![CDATA[ Sử dụng kênh %s để thực hiện giao dịch ? ]]></string>
    <string name="zingpaysdk_confirm_continue_channel02"><![CDATA[ Sử dụng thẻ  %s để thực hiện giao dịch ? ]]></string>
    <string name="zingpaysdk_alert_processing_ask_to_retry">Giao dịch vẫn còn đang xử lý. Bạn có muốn tiếp tục chờ?</string>
    <string name="zingpaysdk_alert_processing_get_status_fail">Giao dịch chưa hoàn tất, vui lòng truy cập http://hotro.zing.vn để được hỗ trợ.</string>
    <string name="zingpaysdk_alert_bad_processing">Hãy chắc rằng bạn có kết nối internet!</string>
    <string name="zingpaysdk_alert_no_connection">Không có kết nối internet, vui lòng thử lại sau</string>
   	<string name="zingpaysdk_alert_network_error">Mạng không ổn định, vui lòng thử lại sau!</string>
   	<string name="zingpaysdk_alert_input_error">Dữ liệu không hợp lệ</string>
   	<string name="zingpaysdk_alert_network_error_get_status_fail">Mạng không ổn định, vui lòng thử lại sau! Hoặc vui lòng truy cập http://hotro.zing.vn để được giúp đỡ.</string>
   	<string name="zingpaysdk_alert_network_error_verify_iab">Mạng không ổn định, giao dịch chưa được xác minh, vui lòng kiểm tra lại kết nối internet!</string>
    <string name="zingpaysdk_alert_amount_not_support">Không có kênh nào hỗ trợ mệnh giá trên. Số tiền tối thiểu là: %s.</string>
    <string name="zingpaysdk_alert_all_excluded">Không có kênh nào hỗ trợ cho giao dịch của !</string>
    <string name="zingpaysdk_alert_sent_sms">Hệ thống sẽ tự động cập nhật ngay khi nhận tin nhắn của bạn!</string>
    <string name="zingpaysdk_alert_resume_cc">Hệ thống sẽ tự động cập nhật khi giao dịch thành công!</string>
    <string name="zingpaysdk_alert_not_support_device">Thiết bị của bạn không được hỗ trợ!</string>
    <string name="zingpaysdk_alert_processing_bank">Đang kết nối với ngân hàng</string>
    <string name="zingpaysdk_alert_atm_wrong_4last_digits">4 số cuối mã thẻ không chính xác</string>
    <string name="zingpaysdk_alert_atm_wrong_4last_digits_more">Bạn đã nhập sai quá số lần cho phép. Thông tin thẻ cũ sẽ bị hủy.</string>
    <string name="zingpaysdk_alert_atm_expired">Giao dịch đã quá hạn\n.Vui lòng thực hiện lại thanh toán.</string>
    <string name="zingpaysdk_alert_atm_incomplete_captcha">Mã captcha tối thiểu phải đủ 6 kí tự.</string>
    <string name="zingpaysdk_alert_atm_incomplete_otp">Mã OTP tối thiểu phải đủ 4 kí tự.</string>
    <string name="zingpaysdk_alert_credit_card_cancel">Giao dịch đã bị hủy</string>
    <string name="zingpaysdk_alert_google_iab_item_not_found">Vật phẩm chưa được đăng ký với Google In-app Billing</string>
    <string name="zingpaysdk_alert_lower_min_value">Số tiền thanh toán tối thiểu là: %s VNĐ</string>
    <string name="zingpaysdk_alert_higher_max_value">Số tiền thanh toán tối đa là: %s VNĐ</string>
    <string name="zingpaysdk_alert_price_multiple">Số tiền thanh toán phải là bội số của %s VNĐ</string>
   	<string name="zingpaysdk_missing_app_pmt_info">Thiếu thông tin đơn hàng.</string>
   	<string name="zingpaysdk_missing_app_user">Thiếu app user trong paymen info.</string>
   	<string name="zingpaysdk_invalid_app_trans">Thiếu app user trong paymen info.</string>
   	<string name="zingpaysdk_invalid_app_time">AppTime không hợp lệ.</string>
   	<string name="zingpaysdk_invalid_app_amount">Amount không hợp lệ.</string>
   	<string name="zingpaysdk_invalid_user_id_user_name">Thông tin nạp tiền vào ví không hợp lệ</string>
   	<string name="zingpaysdk_invalid_token">Token không hợp lệ</string>
   	<string name="zpw_conf_gwinfo_app_list">gwinfo_app_list_id</string>
   	<string name="zingpaysdk_conf_gwinfo_expired_time">gwinfo_expired_time</string>
   	<string name="zingpaysdk_conf_gwinfo_sdk_checksum">checksum_sdk</string>
   	<string name="zingpaysdk_conf_gwinfo_sdk_ver">checksum_sdk_ver</string>
   	<string name="zingpaysdk_conf_gwinfo_unzip_path">unzip_path</string>
   	<string name="zingpaysdk_conf_gwinfo_res_ver">resource_version</string>
   	<string name="zingpaysdk_conf_gwinfo_app_logo">zpsdk_app_logo_</string>
   	<string name="zingpaysdk_conf_gwinfo_app_logo_extension">.png</string>
   	<string name="zingpaysdk_conf_gwinfo_app_name">app_name</string>
   	<string name="zingpaysdk_conf_gwinfo_app_distr">app_distr</string>
   	<string name="zingpaysdk_conf_gwinfo_unzip_folder">zingpay</string>
   	<string name="zingpaysdk_conf_gwinfo_udid">unit_device_id</string>
   	<string name="zingpaysdk_conf_gwinfo_gchannel_list">channel_group_list</string>
   	<string name="zingpaysdk_conf_gwinfo_gchannel_prefix">channel_group_</string>
   	<string name="zingpaysdk_conf_gwinfo_channel_link_card">1000</string>
   	<string name="zingpaysdk_conf_gwinfo_channel_atm">6</string>
   	<string name="zingpaysdk_conf_gwinfo_channel_credit_card">36</string>
   	<string name="zingpaysdk_conf_gwinfo_channel_zalopay">38</string>
   	<string name="zpw_conf_wallet_amount">10000</string>
   	<string name="zpw_conf_wallet_desc">Nạp 10.000 VNĐ vào Ví.</string>
   	<string name="zpw_conf_wallet_id">1</string>
   	<string name="zingpaysdk_conf_gwinfo_channel_list">channel_list_</string>
   	<string name="zingpaysdk_conf_gwinfo_channel_prefix">channel_</string>
   	<string name="zpw_config_platform_info_app">app_</string>
   	<string name="zpw_conf_gwinfo_mapped_card_list">mapped_card_</string>
   	<string name="zpw_conf_gwinfo_mapped_card_info">mapped_card_list_</string>
   	<string name="zingpaysdk_conf_atm_api_num_of_captcha">6</string>
   	<string name="zingpaysdk_conf_atm_api_num_of_otp">4</string>
   	<string name="zingpaysdk_conf_last_success_pmc_id">last_success_pmc_id</string>
   	<string name="zingpaysdk_conf_last_success_atm_card">last_success_atm_card</string>
   	<string name="zingpaysdk_conf_num_of_wrong_4_last_digits">num_of_wrong_4_last_digits</string>
   	<string name="zingpaysdk_conf_promotion_img">hover_discount_%spercent.png</string>
   	<string name="zingpaysdk_conf_price_multiple">10000</string>
   	<string name="zingpaysdk_conf_error_code_invalid_hmac">-53</string>
   	<string name="zingpaysdk_conf_error_code_expired_hmac">-54</string>
   	<string name="zingpaysdk_activity_small_title">Chọn kênh thanh toán</string>
   	<string name="zingpaysdk_intent_key_payment_info">zpsdk_payment_info</string>
   	<string name="zingpaysdk_intent_key_channel">zpsdk_channel</string>
   	<string name="zingpaysdk_custom_ui_gray">gray_button</string>
   	<string name="zingpaysdk_custom_ui_normal">normal_button</string>
   	<string name="gcm_defaultSenderId">282009334352</string>
   	<string name="global_tracker_id">UA-77526623-1</string>
     <string name="zingpaysdk_pmc_name_zalopay">Ví ZaloPay</string>
    <string name="zingpaysdk_zalopay_title">Xác nhận giao dịch</string>
    <string name="zingpaysdk_zalopay_title_money_input">Số tiền nạp</string>
    <string name="zingpaysdk_zalopay_title_payprice">Phí giao dịch</string>
    <string name="zingpaysdk_zalopay_title_payamount">Tổng chi phí</string>
    <string name="zingpaysdk_zalopay_title_paychannal">Nguồn nạp</string>
    <string name="zingpaysdk_zalopay_info_status">Số dư không đủ</string>
    <string name="zpw_string_atm_method_name">Thanh toán bằng thẻ nội địa</string>
    <string name="zpw_string_credit_card_method_name">Thanh toán bằng thẻ tín dụng VISA</string>
    <string name="zpw_string_credit_card_link">Liên kết thẻ</string>
    <string name="zpw_button_submit_text">Tiếp Tục</string>
    <string name="zpw_string_card_number_hint">Số thẻ</string>
    <string name="zpw_string_card_name_hint">Chủ thẻ</string>
    <string name="zpw_string_issue_date_hint">Ngày phát hành (tháng/năm)</string>
	<string name="zpw_string_atm_format_wrong">Thẻ của bạn không phải ATM</string>
	<string name="zpw_string_credit_format_wrong">Thẻ của bạn không phải thẻ tín dụng</string>
	<string name="zpw_string_payment_currency_label">VNĐ</string>
   	<string name="zpw_string_opt_hint">Nhập mã OTP</string>
   	<string name="zpw_string_capcha_hint">Nhập mã bên dưới</string>
   	<string name="zpw_string_acc_name_hint">10 số tài khoản thẻ đã năng</string>
   	<string name="zpw_string_acc_password_hint">06-16 số mật mã</string>
   	<string name="zpw_string_credit_card_expired_date_hint">Ngày hết hạn (mm/yy)</string>
   	<string name="zpw_string_credit_card_cvv_hint">CVV</string>
   	<string name="zpw_string_payment_success_label">THANH TOÁN THÀNH CÔNG!</string>
   	   	<string name="zpw_string_payment_error_label">NẠP TIỀN KHÔNG THÀNH CÔNG!</string>
   	<string name="zpw_string_credit_card_save_label">Lưu thông tin</string>
   	<string name="zpw_string_credit_card_save_label_01">mã thẻ</string>
   	<string name="zpw_string_hidden_character">***</string>
   	<string name="zpw_string_title_header_pay_success">Thanh toán</string>
   	<string name="zpw_string_not_enough_money_wallet">Tài khoản của bạn không đủ tiền.Vui lòng nạp thêm.</string>
   	<string name="zpw_string_button_close">Đóng</string>
   	<string name="zpw_app_info_map_channel_checksum">app_map_channel_checksum_</string>
   	<string name="zpw_app_info_map_channel_expired_time">app_map_channel_expired_time_</string>
   	<string name="zpw_string_fee_free">Miễn phí</string>
   	<string name="zpw_app_info_exclude_channel">Hiện không có kênh nào hỗ trợ cho giao dịch của bạn.</string>
   	<string name="zpw_string_title_fee">Phí thanh toán</string>
   	<string name="zpw_string_title_total_pay">Thanh toán</string>
   	<string name="zpw_string_vnd">VNĐ</string>
   	<string name="zpw_string_select_bank">Chọn</string>
   	<string name="zpw_string_title_select_back">Lựa chọn ngân hàng</string>
 	<string name="app_name">ZALOWALLET_DIALOG</string>
</resources>