<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:gravity="center"
    android:minWidth="240dip"
    android:orientation="vertical"
    android:paddingLeft="30dip"
    android:paddingRight="30dip"
    tools:context=".PaymentGatewayActivity" >

    <TextView
        android:id="@+id/zpsdk_message_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/zpsdk_border11"
        android:gravity="center"
        android:padding="7dip"
        android:text="@string/zingpaysdk_notification"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/zpsdk_message_ctl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/zpsdk_white"
        android:gravity="center"
        android:minHeight="75dip"
        android:paddingBottom="2dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="2dip"
        android:scrollbars="vertical"
        android:text="@string/zingpaysdk_alert_processing"
        android:textColor="#000"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/zalosdk_status_ctl"
        android:layout_width="32dip"
        android:layout_height="32dip"
        android:layout_margin="5dip"
        android:contentDescription="@string/zingpaysdk_app_name"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/zpsdk_cancel_ctl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/zpsdk_border07"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:text="@string/zingpaysdk_cancel"
            android:textColor="#fff"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <View
            android:id="@+id/zpsdk_button_devider"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/zpsdk_white"
            android:visibility="gone" />

        <TextView
            android:id="@+id/zpsdk_ok_ctl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/zpsdk_border07"
            android:gravity="center"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:text="@string/zingpaysdk_close"
            android:textColor="#fff"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>