<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#d3d7e4" />

    <RelativeLayout
        android:id="@+id/payment_method_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="37dp" >

        <ImageView
            android:id="@+id/channel_close"
            android:layout_width="24dp"
            android:layout_height="34dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:scaleType="fitCenter"
            android:background="#d3d7e4"
            android:src="@drawable/i_close" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/payment_method_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="1px"
                android:gravity="center_horizontal"
                android:text="@string/zingpaysdk_zalopay_title"
                android:textColor="#292f33"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/payment_method_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="#ed750a"
                android:textSize="20dp"
                android:visibility="gone" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/dark_transparent" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/payment_method_container"
        android:layout_gravity="center_horizontal"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/item_lbl_money_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/zingpaysdk_zalopay_title_money_input"
                    android:textColor="@color/dark_transparent"
                    android:textSize="@dimen/payment_info_row2_text_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right" >

                    <TextView
                        android:id="@+id/item_name_money_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textColor="#000"
                        android:textSize="@dimen/payment_info_row2_text_size" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/item_lbl_paycost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/zingpaysdk_zalopay_title_payprice"
                    android:textColor="@color/dark_transparent"
                    android:textSize="@dimen/payment_info_row2_text_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right" >

                    <TextView
                        android:id="@+id/item_name_payprice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textColor="#000"
                        android:textSize="@dimen/payment_info_row2_text_size" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/item_lbl_payamount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/zingpaysdk_zalopay_title_payamount"
                    android:textColor="@color/dark_transparent"
                    android:textSize="@dimen/payment_info_row2_text_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right" >

                    <TextView
                        android:id="@+id/item_name_payamount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textColor="#000"
                        android:textSize="@dimen/payment_info_row2_text_size" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/item_lbl_paychannal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/zingpaysdk_zalopay_title_paychannal"
                    android:textColor="@color/dark_transparent"
                    android:textSize="@dimen/payment_info_row2_text_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right" >

                    <TextView
                        android:id="@+id/item_name_paychannal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:singleLine="false"
                        android:textColor="#000"
                        android:textSize="@dimen/payment_info_row2_text_size"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/item_name_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textColor="@color/dark_transparent"
                    android:textSize="@dimen/payment_info_row2_text_size" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>